--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
-username: 
-password: 
-phone_number:
+username: mehrabanbar@gmail.com
+password: XturN4*z2P+wC_^
+phone_number: 647-648-1300
 
 positions:
 - Data Scientist
