--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-selenium~=3.141.0
-beautifulsoup4~=4.9.1
-pandas~=1.3.1
-pyautogui~=0.9.50
+selenium
+beautifulsoup4
+pandas
+pyautogui
 webdriver_manager
-PyYAML~=5.3.1
+PyYAML
 lxml
-future~=0.18.3
-bs4~=0.0.1
+future
+bs4
 future
